[project]
name = "heartbeat-classifier"
version = "1.0.0"
description = "ECG arrhythmia detection using deep learning on the MIT-BIH database"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Daniel Anchuela Cantarero", email = "dani.anchuela09@gmail.com" }]
keywords = ["ecg", "arrhythmia", "deep-learning", "biomedical", "signal-processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tensorflow>=2.13,<2.17",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev   = ["pytest>=8.0", "ruff>=0.4"]
metal = ["tensorflow-metal"]
data  = ["wfdb>=4.1"]

[project.scripts]
hbc-download   = "heartbeat_classifier.data.download:main"
hbc-preprocess = "heartbeat_classifier.preprocessing.signal_processor:main"
hbc-train      = "heartbeat_classifier.training.trainer:main"
hbc-evaluate   = "heartbeat_classifier.evaluation.evaluator:main"

[project.urls]
Homepage   = "https://github.com/anchu09/heartbeat-classifier"
Repository = "https://github.com/anchu09/heartbeat-classifier"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heartbeat_classifier"]

[tool.ruff]
line-length = 100
src         = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*"  = ["INP001"]
"tests/*"    = ["INP001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
